<?xml version="1.0" encoding="utf-8"?>

<!-- creazione dell menu laterale in base ai drawable definiti-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   tools:showIn="navigation_view">

   <group android:checkableBehavior="single">
       <item android:id="@+id/nav_home"
           android:icon="@drawable/ic_home_page"
           android:title="@string/home" />


       <item android:id="@+id/nav_book"
           android:icon="@drawable/ic_prenotazioni"
           android:title="@string/prenotazioni" />

       <item android:id="@+id/nav_structure"
           android:icon="@drawable/ic_struttura"
           android:title="@string/strutture" />

       <item android:id="@+id/nav_user"
           android:icon="@drawable/ic_user"
           android:title="@string/utente" />
   </group>



</menu>



