<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="@color/cardview_shadow_start_color"
    tools:context=".new_structure">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="94dp"
        android:layout_height="52dp"
        android:layout_marginBottom="264dp"
        android:shadowColor="@color/black"
        android:text="@string/inserisci_indirizzo_della_struttura"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_struct2"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:layout_marginBottom="276dp"
        android:shadowColor="@color/black"
        android:text="@string/descrizione"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.666" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_struct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nome_della_struttura"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="113dp"
        android:layout_height="31dp"
        android:layout_marginBottom="440dp"
        android:shadowColor="@color/black"
        android:text="@string/orario_apertura"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:shadowColor="@color/black"
        android:text="@string/giorni_lavorativi"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.042" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="93dp"
        android:background="@color/teal_700"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/back"
        android:layout_width="56dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:background="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:foreground="?attr/homeAsUpIndicator"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/inserimento_nuova_struttura"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Desc"
            android:layout_width="match_parent"
            android:layout_height="254dp"
            android:hint="@string/descrizione_opzionale" />

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="167dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="193dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/day"
            android:layout_width="160dp"
            android:layout_height="29dp"
            android:layout_marginStart="202dp"
            android:layout_marginTop="100dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Addr"
            android:layout_width="160dp"
            android:layout_height="29dp"
            android:layout_marginTop="100dp" />

    </androidx.appcompat.widget.AppCompatEditText>




</androidx.constraintlayout.widget.ConstraintLayout>